--- a/index.html
+++ b/index.html
@@ -99,20 +99,23 @@
                                 <th>Last Name</th>
                                 <th>Age</th>
                                 <th>Email</th>
+                                <th>Birth Date</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Jill</td>
-                                <td>Smith</td>
-                                <td>50</td>
-                                <td>jill_smith@email.com</td>
+                                <td data-label="First Name">Jill</td>
+                                <td data-label="Last Name">Smith</td>
+                                <td data-label="Age">50</td>
+                                <td data-label="Email">jill_smith@email.com</td>
+                                <td data-label="Birth Date">July 21 1966</td>
                             </tr>
                             <tr>
-                                <td>Eve</td>
-                                <td>Jackson</td>
-                                <td>39</td>
-                                <td>EveJackson@email.com</td>
+                                <td data-label="First Name">Eve</td>
+                                <td data-label="Last Name">Jackson</td>
+                                <td data-label="Age">39</td>
+                                <td data-label="Email">EveJackson@email.com</td>
+                                <td data-label="Birth Date">March 3 1977</td>
                             </tr>
                         </tbody>
                     </table>
