--- a/index.html
+++ b/index.html
@@ -6,95 +6,118 @@
 </head>
 
 <body>
-
-	<!-- THE NAV -->
-	<nav class="nav">
-		<div class="grid">
-			<div class="row">
-				<div class="col col-12">
-					<div class="site-header">
-						<a href="#">Calyx</a>
-					</div>
-					<div class="menu">
-						<a href="#">link</a>
-						<a href="#">link</a>
-						<a href="#">link</a>
-						<a href="#">link</a>
-					</div>
+   <!-- THE GRID -->
+	<div class="row">
+		<div class="container txt-center">
+			<div class="col col-12 txt-left">
+				<h1>The Grid</h1>
+			</div> 
+			<div class="card col col-12">12</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="container txt-center">
+			<div class="card col col-1">1</div>
+			<div class="card col col-11">11</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="container txt-center">
+			<div class="card col col-2">2</div>
+			<div class="card col col-10">10</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="container txt-center">
+			<div class="card col col-3">3</div>
+			<div class="card col col-9">9</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="container txt-center">
+			<div class="card col col-4">4</div>
+			<div class="card col col-8">8</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="container txt-center">
+			<div class="card col col-5">5</div>
+			<div class="card col col-7">7</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="container txt-center">
+			<div class="card col col-6">6</div>
+			<div class="card col col-6">6</div>
+		</div>
+	</div>
+	
+	<br><br>
+	<div class="row">
+		<div class="container ">
+			<div class="col col-12">
+				<div class="code-container">
+					 <h3>The Markup</h3>
+					<code class="code-block">
+&lt;div class="row">
+	&lt;div class="container txt-center">
+		&lt;div class="col col-12 txt-left">
+			&lt;h1>The Grid&lt;/h1>
+		&lt;/div> 
+		&lt;div class="card col col-12">12&lt;/div>
+	&lt;/div>
+&lt;/div>
+&lt;div class="row">
+	&lt;div class="container txt-center">
+		&lt;div class="card col col-1">1&lt;/div>
+		&lt;div class="card col col-11">11&lt;/div>
+	&lt;/div>
+&lt;/div>
+&lt;div class="row">
+	&lt;div class="container txt-center">
+		&lt;div class="card col col-2">2&lt;/div>
+		&lt;div class="card col col-10">10&lt;/div>
+	&lt;/div>
+&lt;/div>
+&lt;div class="row">
+	&lt;div class="container txt-center">
+		&lt;div class="card col col-3">3&lt;/div>
+		&lt;div class="card col col-9">9&lt;/div>
+	&lt;/div>
+&lt;/div>
+&lt;div class="row">
+	&lt;div class="container txt-center">
+		&lt;div class="card col col-4">4&lt;/div>
+		&lt;div class="card col col-8">8&lt;/div>
+	&lt;/div>
+	&lt;/div>
+&lt;div class="row">
+	&lt;div class="container txt-center">
+		&lt;div class="card col col-5">5&lt;/div>
+		&lt;div class="card col col-7">7&lt;/div>
+	&lt;/div>
+&lt;/div>
+&lt;div class="row">
+	&lt;div class="container txt-center">
+		&lt;div class="card col col-6">6&lt;/div>
+		&lt;div class="card col col-6">6&lt;/div>
+	&lt;/div>
+&lt;/div>
+					</code>
 				</div>
 			</div>
 		</div>
-	</nav>
-	
-	<!-- THE GRID -->
-	<div class="grid">
-		<div class="row">
-			<div class="col col-12">
-				<h1 class="example-title">The Grid</h1>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col col-12 example-column">12</div>
-		</div>
-		<div class="row">
-			<div class="col col-1 example-column">1</div>
-			<div class="col col-11 example-column">11</div>
-		</div>
-		<div class="row">
-			<div class="col col-2 example-column">2</div>
-			<div class="col col-10 example-column">10</div>
-		</div>
-		<div class="row">
-			<div class="col col-3 example-column">3</div>
-			<div class="col col-9 example-column">9</div>
-		</div>
-		<div class="row">
-			<div class="col col-4 example-column">4</div>
-			<div class="col col-8 example-column">8</div>
-		</div>
-		<div class="row">
-			<div class="col col-5 example-column">5</div>
-			<div class="col col-7 example-column">7</div>
-		</div>
-		<div class="row">
-			<div class="col col-6 example-column">6</div>
-			<div class="col col-6 example-column">6</div>
-		</div>
 	</div>
 	
-	<!-- THE GRID: MARKUP -->
-	<div class="grid">
-		<div class="row">
-			<div class="col col-12">
-				<pre class="code-block">
-<code>
-&lt;div class="grid"&gt;
-   &lt;div class="row"&gt;
-      &lt;div class="col col-12"&gt;
-      &lt;h1&gt;The Grid&lt;/h1&gt;
-   &lt;/div&gt;
-   &lt;/div&gt;
-   &lt;div class="row"&gt;
-      &lt;div class="col col-12 example-column"&gt;12&lt;/div&gt;
-   &lt;/div&gt;
-   &lt;div class="row"&gt;
-      &lt;div class="col col-1 example-column"&gt;1&lt;/div&gt;
-      &lt;div class="col col-11 example-column"&gt;11&lt;/div&gt;
-   &lt;/div&gt;
-&lt;/div&gt;</code>
-				</pre>
-			</div>								
-		</div>	
-		<hr>	
-	</div>
+	<br><br>
 	
 	<!-- TYPOGRAPHY -->
-	<div class="grid">
-		<div class="row">
+	<div class="row">
+		<div class="container">
 			<div class="col col-12">
-				<h1 class="example-title">Typography</h1>
+				<h1>Typography</h1>
 			</div> 
-			<div class="col col-12">
+			<div class="card col col-12">
 				<h1>Heading 1</h1>
 				<h2>Heading 2</h2>
 				<h3>Heading 3</h3>
@@ -115,16 +138,17 @@
 				</em></p>
 			</div>
 		</div>
-		<hr>	
 	</div>
 	
+	<br><br>
+	
 	<!-- TABLES -->
-	<div class="grid">
-		<div class="row">
+	<div class="row">
+		<div class="container">
 			<div class="col col-12">
-				<h1 class="example-title">Tables</h1>
+				<h1>Tables</h1>
 			</div> 
-			<div class="col col-12">
+			<div class="card col col-12">
 				<table>
 					<thead>
 						<tr>
@@ -154,16 +178,17 @@
 				</table>
 			</div>
 		</div>
-		<hr>	
 	</div>
 	
+	<br><br>
+	
 	<!-- FORMS -->
-	<div class="grid">
-		<div class="row">
-			<div class="col col-12">
-				<h1 class="example-title">Forms</h1>
+	<div class="row">
+		<div class="container">
+		   <div class="col col-12">
+				<h1>Forms</h1>
 			</div>
-			<div class="col col-12">
+			<div class="card col col-12">
 				<form>
 					<div class="col col-4">
 						<label for="button">Input type: Button</label>
