--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 		<div class="grid">
 			<div class="row">
 				<div class="col col-12">
-					<div class="site-header">
-						<a href="#">Calyx</a>
-					</div>
 					<ul class="nav-menu">
+					    <li class="site-header">
+					        <a href="#">Calyx</a>
+					    </li>
 						<li><a href="#">link</a></li>
 						<li><a href="#">link</a></li>
 						<li><a href="#">link</a></li>
@@ -39,6 +39,9 @@
 								<li><a href="#tables">Tables</a></li>
 								<li><a href="#forms">Forms</a></li>
 							</ul>
+						</li>
+						<li class="mobile-icon">
+							<a href="javascript:void(0);" onclick="navMobile()">&#9776;</a>
 						</li>
 					</ul>
 				</div>
@@ -319,6 +322,9 @@
 			</div>
 		</div>
 	</footer>
+	
+	<!-- JAVASCRIPT DEPENDENCIES -->
+	<script src="js/calyx.js"></script>
 	
 </body>
 </html>
