--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
 					        <a href="#">Calyx</a>
 					    </li>
 						<li>
-						    <a class="dropdown-btn" onclick="dropdownToggle()" >Components</a>
+						    <a href="#">Components</a>
 							<ul>
-								<li class="dropdown"><a href="#grid">The Grid</a></li>
-								<li class="dropdown"><a href="#typography">Typography</a></li>
-								<li class="dropdown"><a href="#navigation">Navigation</a></li>
-								<li class="dropdown"><a href="#tables">Tables</a></li>
-								<li class="dropdown"><a href="#forms">Forms</a></li>
+								<li><a href="#grid">The Grid</a></li>
+								<li><a href="#typography">Typography</a></li>
+								<li><a href="#navigation">Navigation</a></li>
+								<li><a href="#tables">Tables</a></li>
+								<li><a href="#forms">Forms</a></li>
 							</ul>
 						</li>
-						<li><a href="#">link 1</a></li>
-						<li><a href="#">link 2</a></li>
-						<li><a href="#">link 3</a></li>
+						<li><a href="#">Link 1</a></li>
+						<li><a href="#">Link 2</a></li>
+						<li><a href="#">Link 3</a></li>
 						<li class="mobile-icon">
 							<a href="javascript:void(0);" onclick="navToggle()">&#9776;</a>
 						</li>
